Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

CVS HEAD

* Initial support for sampler channel FX sends, while saving
  the session state, only at code-level.
  
* Sampler channel setup dialog does not mandate for valid nor
  existing instrument file name.

* Revised error verbosity in general and on session load/save;
  hour-glass wait cursor is now displayed on session load/save;
  keyboard shortcuts changed on MIDI instruments view context;
  improved channel strip arrangement on session open/load;
  instrument map entry removal confirmation (as optional);
  corrected some tooltip text strings.

* Most top-level widgets were missing the normal-widget flag,
  which were causing some sticky size behavior while on some
  window managers.

* Added preliminary MIDI instrument mapping support; now
  with an instrument list widget and editing capabilities;
  MIDI instrumeent map program numbers are now displayed in
  the range 1-128, instead of the internal 0-127.

* GPL address update.


0.1.3   2006-06-01 Its been a long year isn't it?

* Changed deprecated copyright attribute to license,
  on qsampler.spec (RPM).

* Added configure support for x86_64 libraries (UNTESTED).

* Optional specification of alternate liblscp and libgig
  installation paths have been added to configure command
  arguments (--with-liblscp, --with-libgig).

* Whenever the listing of actual instrument names is not an
  option (e.g. due to lack of libgig support), the whole
  number of selectable instrument items is now being graciously
  increased from just the bare 8 (eight) right up through 100
  (one hundred), on the sampler channel setup dialog.

* The selection buttons, on the right of the Instrument, Audio
  and MIDI devices combo-boxes, on the sampler channel dialog,
  are now expected to be a little better looking than it was
  before, at least for those Mac OS X eyes.

* Minor fixing on the initial messages dock-window height.
