@@ -1,6 +1,6 @@
 
 #define PACKAGE_NAME    "Qsampler"
-#define PACKAGE_VERSION "0.1.3.23"
+#define PACKAGE_VERSION "0.1.3.24"
 
 #define CONFIG_PREFIX   "."
 #define CONFIG_DEBUG    1
@@ -13,6 +13,7 @@
 #define CONFIG_AUDIO_ROUTING    1
 #define CONFIG_FXSEND           1
 #define CONFIG_FXSEND_LEVEL     1
+#define CONFIG_VOLUME           1
 
 #undef  HAVE_SIGNAL_H
 
